--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/navigation_graph"
-    app:startDestination="@id/firstFragment">
+<navigation
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/navigation_graph"
+        app:startDestination="@id/firstFragment">
 
     <fragment
-        android:id="@+id/firstFragment"
-        android:name="com.tks10.safeargsexample.FirstFragment"
-        android:label="fragment_first"
-        tools:layout="@layout/fragment_first" >
+            android:id="@+id/firstFragment"
+            android:name="com.tks10.safeargsexample.FirstFragment"
+            android:label="fragment_first"
+            tools:layout="@layout/fragment_first">
 
         <action
-            android:id="@+id/action_first_to_second"
-            app:destination="@id/secondFragment" />
+                android:id="@+id/action_first_to_second"
+                app:destination="@id/secondFragment"/>
 
     </fragment>
 
     <fragment
-        android:id="@+id/secondFragment"
-        android:name="com.tks10.safeargsexample.SecondFragment"
-        android:label="fragment_second"
-        tools:layout="@layout/fragment_second" >
-
+            android:id="@+id/secondFragment"
+            android:name="com.tks10.safeargsexample.SecondFragment"
+            android:label="fragment_second"
+            tools:layout="@layout/fragment_second">
     </fragment>
+
 </navigation>
