--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -23,6 +23,11 @@
             android:name="com.tks10.safeargsexample.SecondFragment"
             android:label="fragment_second"
             tools:layout="@layout/fragment_second">
+
+        <argument
+                android:name="content"
+                app:argType="string"/>
+
     </fragment>
 
 </navigation>
