--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -6,26 +6,22 @@
         android:layout_height="match_parent">
 
     <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/resultTextView"
+            android:id="@+id/contentTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:layout_marginBottom="120dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/valueEditText"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_chainStyle="packed"/>
-
-    <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/valueEditText"
-            android:layout_width="240dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:inputType="number"
-            app:layout_constraintTop_toBottomOf="@id/resultTextView"
             app:layout_constraintBottom_toTopOf="@id/nextButton"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/valueTextView"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/valueTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            app:layout_constraintBaseline_toBaselineOf="@id/contentTextView"
+            app:layout_constraintStart_toEndOf="@id/contentTextView"
             app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.appcompat.widget.AppCompatButton
@@ -34,7 +30,7 @@
             android:layout_height="wrap_content"
             android:text="Next"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/valueEditText"
+            app:layout_constraintTop_toBottomOf="@id/contentTextView"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
