--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -13,13 +13,15 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/nextButton"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/valueTextView"/>
+            app:layout_constraintEnd_toStartOf="@id/valueTextView"
+            app:layout_constraintHorizontal_chainStyle="packed"/>
 
     <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/valueTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            android:layout_marginStart="16dp"
             app:layout_constraintBaseline_toBaselineOf="@id/contentTextView"
             app:layout_constraintStart_toEndOf="@id/contentTextView"
             app:layout_constraintEnd_toEndOf="parent"/>
